--- a/web/app/templates/students/addedit.html
+++ b/web/app/templates/students/addedit.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
+{% block scripts %}
+    {{super()}}
+     <script type="text/javascript" src="{{ url_for('static', filename = 'addEditStudent.js') }}"></script>
+{% endblock %}
+
 {% block app_content %}
     <h1> {{ header }} <b>{{ course_name }}</b></h1>
 
@@ -16,7 +21,7 @@
 
                         {% if for_edit == True %}
                             <label>Не рекомендуется использовать эту опцию.</label><br/>
-                            <a class="btn btn-success navbar-btn">Разрешить менять заблокированные поля</a>
+                            <a class="btn btn-success navbar-btn" id="unlock_fields">Разрешить менять заблокированные поля</a>
                             <br/><br/>
                             {% set specificform = form.lms_email_locked %} {% include "helpers/locked_field_form.html" %}
                             {% set specificform = form.telegram_id_locked %} {% include "helpers/locked_field_form.html" %}
