--- a/web/app/templates/students/index.html
+++ b/web/app/templates/students/index.html
@@ -26,6 +26,9 @@
                             <a title="Редактировать" class="btn btn-primary" href="{{ url_for('students.edit', student_id=student.id, course_id=course_id) }}">
                                 <i class="glyphicon glyphicon-edit"></i>
                             </a>
+                            <a title="Заморозить" class="btn btn-primary" href=#>
+                                <i class="glyphicon glyphicon-time"></i>
+                            </a>
                             <button title="Удалить" type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModalCenter{{student.id}}">
                                 <i class="glyphicon glyphicon-trash"></i>
                             </button>
