Наконец то исправил баг

--- a/web/app/templates/students/index.html
+++ b/web/app/templates/students/index.html
@@ -32,7 +32,7 @@
                                 <i class="glyphicon glyphicon-edit"></i>
                             </a>
                             <a title="Заморозить" class="btn btn-primary" name="freeze" data-id="{{ student.id }}">
-                                <i class="glyphicon glyphicon-time"></i>
+                                <i class="glyphicon glyphicon-time" data-id="{{ student.id }}"></i>
                             </a>
                             <button title="Удалить" type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModalCenter{{student.id}}">
                                 <i class="glyphicon glyphicon-trash"></i>
