--- a/web/app/templates/main/index.html
+++ b/web/app/templates/main/index.html
@@ -73,29 +73,5 @@
             </div>
         </div>
     </div>
-    <nav aria-label="Page navigation example">
-        <div class="text-center">
-            <ul class="pagination pagination-lg">
-                {% if prev_url %}
-                    <li class="page-item">
-                    <a class="page-link page-item" href="{{ prev_url }}">Предыдущая</a>
-                    </li>
-                {% else %}
-                    <li class="page-item disabled">
-                    <a aria-disabled="true" class="page-link page-item" href="#">Предыдущая</a>
-                    </li>
-                {% endif %}
-
-                {% if next_url %}
-                    <li class="page-item">
-                    <a class="page-link page-item" href="{{ next_url }}">Следующая</a>
-                    </li>
-                {% else %}
-                    <li class="page-item disabled">
-                    <a aria-disabled="true" class="page-link page-item" href="#">Следующая</a>
-                    </li>
-                {% endif %}
-            </ul>
-        </div>
-    </nav>
+    {% include "helpers/pagination.html" %}
 {% endblock %}
