--- a/web/app/templates/students/index.html
+++ b/web/app/templates/students/index.html
@@ -84,4 +84,5 @@
             <a class="btn btn-success navbar-btn" href="{{ url_for('students.add', course_id=course_id) }}">Добавить студента</a>
         </div>
     </div>
+    {% include "helpers/pagination.html" %}
 {% endblock %}
