--- a/web/app/templates/students/index.html
+++ b/web/app/templates/students/index.html
@@ -49,6 +49,9 @@
                             <a title="Заморозить" class="btn btn-primary" name="freeze" data-id="{{ student.id }}">
                                 <i class="glyphicon glyphicon-time" data-id="{{ student.id }}"></i>
                             </a>
+                            <a title="Завершить курс" class="btn btn-primary" name="finish" data-id="{{ student.id }}">
+                                <i class="glyphicon glyphicon-education" data-id="{{ student.id }}"></i>
+                            </a>
                             <button title="Удалить" type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModalCenter{{student.id}}">
                                 <i class="glyphicon glyphicon-trash"></i>
                             </button>
