Фильтр по бросившим курс студентам

--- a/web/app/templates/students/index.html
+++ b/web/app/templates/students/index.html
@@ -21,6 +21,7 @@
                 <option value="active" {% if student_filter  == "active" %} selected {% endif %}>Активный</option>
                 <option value="freezed" {% if student_filter  == "freezed" %} selected {% endif %}>Замороженный</option>
                 <option value="finished" {% if student_filter  == "finished" %} selected {% endif %}>Завершивший курс</option>
+                <option value="dropped" {% if student_filter  == "dropped" %} selected {% endif %}>Бросивший курс</option>
             </select>
         </label>
     </div>
