Кнопка дополнительных настроек

--- a/web/app/templates/main/index.html
+++ b/web/app/templates/main/index.html
@@ -34,8 +34,11 @@
                         {% endif %}
                         </td>
                         <td>
-                            <a title="Редактировать" class="btn btn-primary" href="{{ url_for('coursecreate.edit', course_id=course.id) }}">
+                            <a title="Редактировать основные настройки" class="btn btn-primary" href="{{ url_for('coursecreate.edit', course_id=course.id) }}">
                                 <i class="glyphicon glyphicon-edit"></i>
+                            </a>
+                            <a title="Дополнительные настройки" type="button" class="btn btn-primary" data-toggle="modal" href="#">
+                                <i class="glyphicon glyphicon-list-alt"></i>
                             </a>
                             <a title="Студенты" type="button" class="btn btn-primary" data-toggle="modal" href="{{ url_for('students.index', course_id=course.id) }}">
                                 <i class="glyphicon glyphicon-user"></i>
