--- a/web/app/templates/students/index.html
+++ b/web/app/templates/students/index.html
@@ -15,7 +15,7 @@
     <br>
     <div id="block_filters" align="right">
         <label align="left" class="control-label"> Курс
-            <select class="form-control" onchange="location = '{{ url_for('students.index', student_filter=student_filter) }}&course_id=' + this.value;">
+            <select class="form-control" onchange="location = '{{ url_for('students.index', student_filter=student_filter, sort_type=sort_type) }}&course_id=' + this.value;">
                 {% for local_course in all_courses %}
                     <option value="{{ local_course.id }}" {% if course_id  == local_course.id %} selected {% endif %}> {{ local_course.name }} </option>
                 {% endfor %}
@@ -23,7 +23,7 @@
         </label>
 
         <label align="left" class="control-label"> Статус студента
-            <select class="form-control" onchange="location = '{{ url_for('students.index', course_id=course_id) }}&student_filter=' + this.value;">
+            <select class="form-control" onchange="location = '{{ url_for('students.index', course_id=course_id, sort_type=sort_type) }}&student_filter=' + this.value;">
                 <option value="any" {% if student_filter  == "any" %} selected {% endif %}>Любой</option>
                 <option value="active" {% if student_filter  == "active" %} selected {% endif %}>Активный</option>
                 <option value="freezed" {% if student_filter  == "freezed" %} selected {% endif %}>Замороженный</option>
@@ -37,10 +37,18 @@
             <div class="table-responsive">
                 <table class="table table-striped table-bordered">
                     <tr>
-                    <th style="border: 1px solid black;">Имя<i id="sort_name" class="fa fa-fw fa-sort"></i></th>
+                    {% if sort_type == "name" %}
+                        <th style="border: 1px solid black;">Имя<i id="sort_name" class="fa fa-fw fa-sort" onClick="location = '{{ url_for('students.index', course_id=course_id, sort_type='name_reversed') }}'"></i></th>
+                    {% else %}
+                        <th style="border: 1px solid black;">Имя<i id="sort_name" class="fa fa-fw fa-sort" onClick="location = '{{ url_for('students.index', course_id=course_id, sort_type='name') }}'"></i></th>
+                    {% endif %}
                     <th style="border: 1px solid black;">Email</th>
                     {% if student_filter  == "active" or student_filter == "freezed" or student_filter == "any" %}
-                        <th style="border: 1px solid black;">Дней до конца курса<i id="sort_days" class="fa fa-fw fa-sort"></i></th>
+                        {% if sort_type == "days" %}
+                            <th style="border: 1px solid black;">Дни<i id="sort_name" class="fa fa-fw fa-sort" onClick="location = '{{ url_for('students.index', course_id=course_id, sort_type='days_reversed') }}'"></i></th>
+                        {% else %}
+                            <th style="border: 1px solid black;">Дни<i id="sort_name" class="fa fa-fw fa-sort" onClick="location = '{{ url_for('students.index', course_id=course_id, sort_type='days') }}'"></i></th>
+                        {% endif %}
                     {% endif %}
                     <th style="border: 1px solid black;">Действия</th>
                     </tr>
