Подключил нормальную либу

--- a/web/app/templates/students/index.html
+++ b/web/app/templates/students/index.html
@@ -2,7 +2,7 @@
 
 {% block scripts %}
     {{super()}}
-    <script src="bootstrap-autocomplete.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/xcash/bootstrap-autocomplete@v2.3.7/dist/latest/bootstrap-autocomplete.min.js"></script>
     <script type="text/javascript" src="{{ url_for('static', filename = 'mainStudents.js') }}"></script>
 {% endblock %}
 
