--- a/web/app/templates/students/index.html
+++ b/web/app/templates/students/index.html
@@ -14,7 +14,8 @@
 {% block app_content %}
     <h1> Список студентов курса <b>{{ course_name }}</b></h1>
     <br>
-    <input class="form-control basicAutoComplete" type="text" data-url="{{ url_for('students.autocomplete', course_id=course_id) }}" autocomplete="off" style="width:50%">
+        <input class="form-control basicAutoComplete" type="text" data-url="{{ url_for('students.autocomplete', course_id=course_id) }}" autocomplete="off" style="width:50%; display: inline-block" value="{{ student_search }}">
+        <button class="btn btn-primary" id="search_student">Найти</button>
     <div id="block_filters" align="right">
         <label align="left" class="control-label"> Курс
             <select class="form-control" onchange="location = '{{ url_for('students.index', student_filter=student_filter, sort_type=sort_type, student_search=student_search) }}&course_id=' + this.value;">
