--- a/web/app/templates/auth/login.html
+++ b/web/app/templates/auth/login.html
@@ -10,4 +10,8 @@
     </div>
     <br>
     <p>{{ 'Нет аккаунта?' }} <a href="{{ url_for('auth.register') }}">{{ 'Зарегистрироваться' }}</a></p>
+   <p>
+    Забыли пароль?
+    <a href="{{ url_for('auth.reset_password_request') }}">Нажмите для восстановления</a>
+    </p>
 {% endblock %}
