Кнопка добавления чека теперь ведет куда надо

--- a/web/app/templates/checks/index.html
+++ b/web/app/templates/checks/index.html
@@ -11,4 +11,5 @@
             </div>
         </div>
     </div>
+    <a class="btn btn-success navbar-btn" href="{{ url_for('checks.add', student_id=student_id) }}">Добавить чек</a>
 {% endblock %}
