--- a/web/app/templates/checks/index.html
+++ b/web/app/templates/checks/index.html
@@ -2,6 +2,7 @@
 
 {% block app_content %}
     <h1> Список чеков студента <b>{{ student_name }}</b></h1>
+    <a class="btn btn-primary navbar-btn" href="{{ url_for('students.index', course_id=course_id) }}">Вернуться к курсу {{ course_name }}</a>
     <div class="panel panel-default">
         <div class="panel-body">
             <div class="table-responsive">
