--- a/web/app/templates/checks/index.html
+++ b/web/app/templates/checks/index.html
@@ -7,10 +7,27 @@
         <div class="panel-body">
             <div class="table-responsive">
                 <table class="table table-striped table-bordered">
-
+                    <tr>
+                        <th style="border: 1px solid black;">Блок</th>
+                        <th style="border: 1px solid black;">Ссылка</th>
+                        <th style="border: 1px solid black;">Дата</th>
+                        <th style="border: 1px solid black;">Действия</th>
+                    </tr>
+                    {% for check in checks %}
+                        <tr>
+                            <td>
+                            </td>
+                            <td>
+                            </td>
+                            <td>
+                            </td>
+                            <td>
+                            </td>
+                        </tr>
+                    {% endfor %}
                 </table>
             </div>
         </div>
+        <a class="btn btn-success navbar-btn" href="{{ url_for('checks.add', student_id=student_id) }}">Добавить чек</a>
     </div>
-    <a class="btn btn-success navbar-btn" href="{{ url_for('checks.add', student_id=student_id) }}">Добавить чек</a>
 {% endblock %}
