--- a/web/app/templates/checks/addedit.html
+++ b/web/app/templates/checks/addedit.html
@@ -12,6 +12,7 @@
                         {{ form.hidden_tag() }}
                         {% with %} {% set  specificform = form.block_number %} {% include "helpers/field_form.html" %} {% endwith %}
                         {% with %} {% set  specificform = form.link %} {% include "helpers/field_form.html" %} {% endwith %}
+                        {% with %} {% set  specificform = form.amount %} {% include "helpers/field_form.html" %} {% endwith %}
                     </div>
                     <p class="control-label">{{ form.submit() }}</p>
                 </form>
