--- a/web/app/templates/checks/index.html
+++ b/web/app/templates/checks/index.html
@@ -8,20 +8,61 @@
             <div class="table-responsive">
                 <table class="table table-striped table-bordered">
                     <tr>
-                        <th style="border: 1px solid black;">Блок</th>
+                        <th style="border: 1px solid black;">Назначение</th>
                         <th style="border: 1px solid black;">Ссылка</th>
-                        <th style="border: 1px solid black;">Дата</th>
+                        <th style="border: 1px solid black;">Сумма</th>
+                        <th style="border: 1px solid black;">Дата последнего изменения</th>
                         <th style="border: 1px solid black;">Действия</th>
                     </tr>
                     {% for check in checks %}
                         <tr>
                             <td>
+                                {% if check.block is none %}
+                                    {{ check.another}}
+                                {% else %}
+                                    Блок {{ check.block.number }}
+                                {% endif %}
                             </td>
                             <td>
+                                {{ check.link }}
                             </td>
                             <td>
+                                {{ check.amount }}
                             </td>
                             <td>
+                                {{ check.updated_on }}
+                            </td>
+                            <td>
+                                <a title="Редактировать" class="btn btn-primary" href="{{ url_for('checks.edit', student_id=student_id, check_id=check.id) }}">
+                                    <i class="glyphicon glyphicon-edit"></i>
+                                </a>
+                                 <button title="Удалить" type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModalCenter{{check.id}}">
+                                    <i class="glyphicon glyphicon-trash"></i>
+                                </button>
+                                <!-- Modal -->
+                                <div class="modal fade" id="exampleModalCenter{{check.id}}">
+                                    <div class="modal-dialog modal-dialog-centered" role="document">
+                                        <div class="modal-content">
+                                            <span style="font-size: 100px;" class="glyphicon glyphicon-question-sign mycentered_horizont"></span>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                            <p style="text-align: center; font-size: 20px" >Вы уверены, что хотите удалить чек у студента <b>"{{student_name}}"</b>?</p>
+                                            <div id="modal-container">
+                                                <div class="menubutton">
+                                                    <button type="button" class="btn btn-secondary button_in_modal" data-dismiss="modal">Отмена</button>
+                                                </div>
+                                                <div class="menubutton">
+                                                    <form action="{{url_for('checks.delete')}}" method="post">
+                                                        <input type="hidden" name="check_id" value="{{ check.id }}">
+                                                        <input type="hidden" name="student_id" value="{{ student_id }}">
+                                                        <input type="submit" value="Удалить" class="btn btn-danger button_in_modal" height="100px">
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </td>
                         </tr>
                     {% endfor %}
