--- a/web/app/templates/profile/edit.html
+++ b/web/app/templates/profile/edit.html
@@ -15,6 +15,8 @@
                     {% with %} {% set  specificform = form.name %} {% include "helpers/field_form.html" %} {% endwith %}
                     {% with %} {% set  specificform = form.telegram_id %} {% include "helpers/field_form.html" %} {% endwith %}
                     {% with %} {% set  specificform = form.lms_id %} {% include "helpers/field_form.html" %} {% endwith %}
+                    При установке галочки в данном поле все письма будут отправляться с почты {{ default_mail }}. Будьте осторожны с данной настройкой
+                    {% with %} {% set  specificform_boolean = form.flag_emails_from_default_mail %} {% include "helpers/boolean_field.html" %} {% endwith %}
                 </div>
 
                 <p> {{ form.submit() }}</p>
