--- a/web/app/templates/coursecreate/edit_additional.html
+++ b/web/app/templates/coursecreate/edit_additional.html
@@ -20,6 +20,7 @@
                             <div class="panel-body">
                             {% for block_entry_form in form.blocks %}
                                 {{ block_entry_form.hidden_tag() }}
+                                Оплата блока {{ loop.index }} <br/>
                                 {% with %} {% set  specificform1 = block_entry_form.link %} {% set  specificform2 = block_entry_form.required_task %} {% include "helpers/two_inputs_in_one_line.html" %} {% endwith %}
                             {% endfor %}
                             </div>
